--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
         <div class="container header-container">
             <div class="logo">
-                <i class="fas fa-gem logo-icon"></i>
+                <i class="fas fa-crown logo-icon"></i>
                 <a href="index.html">Walz Shop</a>
             </div>
             <nav class="main-nav">
@@ -20,19 +20,25 @@
                 <a href="#games">Top Up</a>
                 <a href="#about-us">Tentang Kami</a>
             </nav>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </div>
     </header>
 
     <main>
         <section class="hero-section">
             <div class="container">
-                <h1>Top Up Game Cepat, Aman, dan Murah</h1>
-                <p>Ribuan gamer telah mempercayai kami. Dapatkan Diamond, UC, dan Credits untuk game favorit Anda dengan harga terbaik!</p>
-                <a href="#games" class="btn btn-primary">Top Up Sekarang</a>
+                <h1>Top Up Game Cepat, Aman, dan Termurah!</h1>
+                <p>Jelajahi berbagai pilihan game favoritmu dan nikmati harga spesial setiap hari.</p>
+                <a href="#games" class="btn btn-primary">Top Up Sekarang!</a>
             </div>
         </section>
 
         <section id="promo" class="promo-section container">
+            <h2 class="section-title">Promo Terbaru</h2>
             <div class="slider">
                 <div class="slider__track" id="promo-slider"></div>
                 <div class="slider__dots" id="slider-dots"></div>
@@ -47,23 +53,27 @@
 
         <section id="about-us" class="about-us-section">
             <div class="container">
-                <h2 class="section-title">Tentang Walz Shop</h2>
-                <p>Walz Shop adalah tempat terbaik untuk melakukan top up game favorit Anda. Kami menyediakan berbagai macam produk game dengan harga yang sangat terjangkau, proses yang cepat, dan jaminan keamanan transaksi. Kepuasan Anda adalah prioritas kami.</p>
+                <h2 class="section-title">Mengapa Memilih Walz Shop?</h2>
                 <div class="features-grid">
                     <div class="feature-item">
                         <i class="fas fa-shield-alt"></i>
-                        <h3>Aman dan Terpercaya</h3>
-                        <p>Transaksi dijamin aman, tanpa risiko penipuan atau banned. Kami menjaga data Anda dengan baik.</p>
+                        <h3>Aman & Terpercaya</h3>
+                        <p>Transaksi Anda dijamin aman. Kami menjaga privasi dan keamanan data dengan sangat serius.</p>
                     </div>
                     <div class="feature-item">
-                        <i class="fas fa-rocket"></i>
-                        <h3>Proses Cepat</h3>
-                        <p>Setelah pembayaran dikonfirmasi, produk akan langsung masuk ke akun game Anda dalam hitungan menit.</p>
+                        <i class="fas fa-bolt"></i>
+                        <h3>Proses Instan</h3>
+                        <p>Nikmati top up super cepat. Koin, diamond, atau UC akan langsung masuk ke akun Anda!</p>
                     </div>
                     <div class="feature-item">
-                        <i class="fas fa-hand-holding-usd"></i>
-                        <h3>Harga Termurah</h3>
-                        <p>Dapatkan harga paling kompetitif di pasar. Kami selalu memberikan promo dan diskon spesial.</p>
+                        <i class="fas fa-tag"></i>
+                        <h3>Harga Terbaik</h3>
+                        <p>Dapatkan penawaran harga paling kompetitif di pasar. Ada diskon menarik setiap hari!</p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-headset"></i>
+                        <h3>Dukungan Pelanggan</h3>
+                        <p>Tim support kami siap membantu Anda kapan saja. Kami selalu ada untuk menjawab pertanyaan Anda.</p>
                     </div>
                 </div>
             </div>
@@ -74,37 +84,41 @@
         <div class="container footer-container">
             <div class="footer-col about-col">
                 <h3>Walz Shop</h3>
-                <p>Top Up Game Murah, Cepat, dan Terpercaya</p>
+                <p>Solusi Top Up Game Terbaik: Cepat, Aman, dan Ramah di Kantong.</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>
             <div class="footer-col">
-                <h3>Layanan</h3>
+                <h3>Layanan Kami</h3>
                 <ul>
                     <li><a href="#games">Top Up Diamond</a></li>
-                    <li><a href="#">Top Up UC</a></li>
-                    <li><a href="#">Bantuan</a></li>
+                    <li><a href="#games">Top Up UC</a></li>
+                    <li><a href="#games">Gift Card</a></li>
+                    <li><a href="#">Bantuan & FAQ</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h3>Informasi</h3>
                 <ul>
                     <li><a href="#">Kebijakan Privasi</a></li>
-                    <li><a href="#">Syarat dan Ketentuan</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Syarat & Ketentuan</a></li>
+                    <li><a href="#">Tentang Kami</a></li>
+                    <li><a href="#">Karir</a></li>
                 </ul>
             </div>
             <div class="footer-col contact-col">
-                <h3>Kontak</h3>
+                <h3>Hubungi Kami</h3>
                 <p><i class="fas fa-envelope"></i> walzlonely@gmail.com</p>
                 <p><i class="fab fa-whatsapp"></i> +62 822-9890-2274</p>
+                <p><i class="fas fa-map-marker-alt"></i> Indonesia</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+            <p>&copy; 2024 Walz Shop. Semua Hak Dilindungi.</p>
         </div>
     </footer>
 
