--- a/index.html
+++ b/index.html
@@ -3,122 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Game Murah dan Terpercaya</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Walz Shop - Top Up Game Murah & Aman</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://files.catbox.moe/g2447o.png" type="image/x-icon">
 </head>
 <body>
-    <header class="main-header">
-        <div class="container header-container">
-            <div class="logo">
-                <i class="fas fa-crown logo-icon"></i>
-                <a href="index.html">Walz Shop</a>
-            </div>
+    <header class="header">
+        <div class="container">
+            <h1 class="logo">Walz Shop</h1>
             <nav class="main-nav">
-                <a href="index.html" class="active">Beranda</a>
-                <a href="#games">Top Up</a>
-                <a href="#about-us">Tentang Kami</a>
+                <a href="index.html">Beranda</a>
+                <a href="#">Daftar Harga</a>
+                <a href="#">Tentang Kami</a>
             </nav>
-            <div class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
         </div>
     </header>
 
-    <main>
-        <section class="hero-section">
-            <div class="container">
-                <h1>Top Up Game Cepat, Aman, dan Termurah!</h1>
-                <p>Jelajahi berbagai pilihan game favoritmu dan nikmati harga spesial setiap hari.</p>
-                <a href="#games" class="btn btn-primary">Top Up Sekarang!</a>
-            </div>
-        </section>
-
-        <section id="promo" class="promo-section container">
-            <h2 class="section-title">Promo Terbaru</h2>
-            <div class="slider">
-                <div class="slider__track" id="promo-slider"></div>
-                <div class="slider__dots" id="slider-dots"></div>
-            </div>
-        </section>
-        
-        <section id="games" class="games-section container">
-            <h2 class="section-title">Pilih Game Favoritmu</h2>
-            <div class="games-grid" id="games-grid">
+    <main class="main-content">
+        <div class="container">
+            <section class="promo-section">
+                <div class="slider-container">
+                    <div class="slider__track" id="promo-slider">
+                        </div>
+                    <div class="slider-dots" id="slider-dots"></div>
                 </div>
-        </section>
+            </section>
 
-        <section id="about-us" class="about-us-section">
-            <div class="container">
-                <h2 class="section-title">Mengapa Memilih Walz Shop?</h2>
-                <div class="features-grid">
-                    <div class="feature-item">
-                        <i class="fas fa-shield-alt"></i>
-                        <h3>Aman & Terpercaya</h3>
-                        <p>Transaksi Anda dijamin aman. Kami menjaga privasi dan keamanan data dengan sangat serius.</p>
+            <section class="games-section">
+                <h2 class="section-title">Pilih Game Anda</h2>
+                <div class="games-grid" id="games-grid">
                     </div>
-                    <div class="feature-item">
-                        <i class="fas fa-bolt"></i>
-                        <h3>Proses Instan</h3>
-                        <p>Nikmati top up super cepat. Koin, diamond, atau UC akan langsung masuk ke akun Anda!</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-tag"></i>
-                        <h3>Harga Terbaik</h3>
-                        <p>Dapatkan penawaran harga paling kompetitif di pasar. Ada diskon menarik setiap hari!</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-headset"></i>
-                        <h3>Dukungan Pelanggan</h3>
-                        <p>Tim support kami siap membantu Anda kapan saja. Kami selalu ada untuk menjawab pertanyaan Anda.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
 
-    <footer class="main-footer">
-        <div class="container footer-container">
-            <div class="footer-col about-col">
-                <h3>Walz Shop</h3>
-                <p>Solusi Top Up Game Terbaik: Cepat, Aman, dan Ramah di Kantong.</p>
-                <div class="social-links">
-                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
-                </div>
-            </div>
-            <div class="footer-col">
-                <h3>Layanan Kami</h3>
-                <ul>
-                    <li><a href="#games">Top Up Diamond</a></li>
-                    <li><a href="#games">Top Up UC</a></li>
-                    <li><a href="#games">Gift Card</a></li>
-                    <li><a href="#">Bantuan & FAQ</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h3>Informasi</h3>
-                <ul>
-                    <li><a href="#">Kebijakan Privasi</a></li>
-                    <li><a href="#">Syarat & Ketentuan</a></li>
-                    <li><a href="#">Tentang Kami</a></li>
-                    <li><a href="#">Karir</a></li>
-                </ul>
-            </div>
-            <div class="footer-col contact-col">
-                <h3>Hubungi Kami</h3>
-                <p><i class="fas fa-envelope"></i> walzlonely@gmail.com</p>
-                <p><i class="fab fa-whatsapp"></i> +62 822-9890-2274</p>
-                <p><i class="fas fa-map-marker-alt"></i> Indonesia</p>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Walz Shop. Semua Hak Dilindungi.</p>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
         </div>
     </footer>
 
