--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walz Shop - Top Up Game Murah & Aman</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="logo">Walz Shop</h1>
+            <a href="index.html" class="logo">Walz Shop</a>
             <nav class="main-nav">
                 <a href="index.html">Beranda</a>
                 <a href="#">Daftar Harga</a>
@@ -38,7 +41,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+            <p>&copy; 2024 Walz Shop. Hak Cipta Dilindungi.</p>
         </div>
     </footer>
 
