--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -35,6 +36,68 @@
                 <h2 class="section-title">Pilih Game Anda</h2>
                 <div class="games-grid" id="games-grid">
                     </div>
+            </section>
+
+            <section class="why-us-section">
+                <h2 class="section-title">Kenapa Memilih Kami?</h2>
+                <div class="why-us-grid">
+                    <div class="why-us-item">
+                        <i class="fas fa-shield-alt icon-large"></i>
+                        <h3>Aman & Terpercaya</h3>
+                        <p>Transaksi dijamin aman, cepat, dan 100% legal.</p>
+                    </div>
+                    <div class="why-us-item">
+                        <i class="fas fa-bolt icon-large"></i>
+                        <h3>Proses Cepat</h3>
+                        <p>Pesanan langsung diproses setelah pembayaran terkonfirmasi.</p>
+                    </div>
+                    <div class="why-us-item">
+                        <i class="fas fa-tag icon-large"></i>
+                        <h3>Harga Termurah</h3>
+                        <p>Kami menawarkan harga top up yang paling kompetitif.</p>
+                    </div>
+                    <div class="why-us-item">
+                        <i class="fas fa-headset icon-large"></i>
+                        <h3>Layanan 24/7</h3>
+                        <p>Dukungan pelanggan siap membantu kapan saja.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="testimonials-section">
+                <h2 class="section-title">Apa Kata Mereka?</h2>
+                <div class="testimonials-grid">
+                    <div class="testimonial-card">
+                        <p>"Prosesnya cepat banget! Gak sampai 5 menit diamond sudah masuk. Rekomended banget!"</p>
+                        <div class="testimonial-author">
+                            <img src="https://i.pravatar.cc/150?u=a" alt="Author" class="author-img">
+                            <div class="author-info">
+                                <h4>Budi Santoso</h4>
+                                <span>Player Mobile Legends</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p>"Harga di sini paling murah dibanding tempat lain. Adminnya ramah dan fast respon. Sukses terus!"</p>
+                        <div class="testimonial-author">
+                            <img src="https://i.pravatar.cc/150?u=b" alt="Author" class="author-img">
+                            <div class="author-info">
+                                <h4>Siti Aminah</h4>
+                                <span>Player Free Fire</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p>"Top up Genshin Impact di sini ga pernah gagal. Pelayanannya top!"</p>
+                        <div class="testimonial-author">
+                            <img src="https://i.pravatar.cc/150?u=c" alt="Author" class="author-img">
+                            <div class="author-info">
+                                <h4>Agus Setiawan</h4>
+                                <span>Player Genshin Impact</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
