--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -19,12 +19,24 @@
                 <a href="#">Daftar Harga</a>
                 <a href="#">Tentang Kami</a>
             </nav>
+            <div class="menu-toggle" id="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </header>
 
     <main class="main-content">
         <div class="container">
+            <section class="hero-section">
+                <div class="hero-content">
+                    <h1>Top Up Game Instan, Aman, dan Termurah!</h1>
+                    <p>Dapatkan diamond, UC, dan item game favoritmu dengan harga terbaik dan proses secepat kilat. Tersedia 24/7!</p>
+                    <a href="#games-section" class="btn btn-primary-hero">Mulai Top Up Sekarang <i class="fas fa-arrow-down"></i></a>
+                </div>
+            </section>
+
             <section class="promo-section">
+                <h2 class="section-title">Promo Terbaru</h2>
                 <div class="slider-container">
                     <div class="slider__track" id="promo-slider">
                         </div>
@@ -32,7 +44,7 @@
                 </div>
             </section>
 
-            <section class="games-section">
+            <section class="games-section" id="games-section">
                 <h2 class="section-title">Pilih Game Anda</h2>
                 <div class="games-grid" id="games-grid">
                     </div>
@@ -105,6 +117,11 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Walz Shop. Hak Cipta Dilindungi.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
         </div>
     </footer>
 
